--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-/*  your css code here. If applicable */
+header{
+	font-size:50px;
+}
+h1{
+	font-size:20px;
+}
+h2{
+	font-size:20px;
+}
+p{
+	color: blueviolet;
+}
